--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -65,14 +65,14 @@ jobs:
     - name: Pull Docker images
       run: |
         ssh -o StrictHostKeyChecking=no -i key.pem ec2-user@${{ secrets.AWS_EC2_HOST }} <<-EOF
-          sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/user-service:1.0
-          sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/post-service:1.0
-          sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/comment-service:1.0
+          sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/api/user-service:1.0
+          sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/api/post-service:1.0
+          sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/api/comment-service:1.0
         EOF
     - name: Run new containers
       run: |
         ssh -o StrictHostKeyChecking=no -i key.pem ec2-user@${{ secrets.AWS_EC2_HOST }} <<-EOF
-          sudo docker run -d --name service-list-task -p 8085:3001 ${{ secrets.DOCKERHUB_USERNAME }}/user-service:1.0
-          sudo docker run -d --name service-update-task -p 8084:3002 ${{ secrets.DOCKERHUB_USERNAME }}/post-service:1.0
-          sudo docker run -d --name service-delete-task -p 8083:3003 ${{ secrets.DOCKERHUB_USERNAME }}/comment-service:1.0
+          sudo docker run -d --name service-user -p 8085:3001 ${{ secrets.DOCKERHUB_USERNAME }}/api/user-service:1.0
+          sudo docker run -d --name service-post -p 8084:3002 ${{ secrets.DOCKERHUB_USERNAME }}/api/post-service:1.0
+          sudo docker run -d --name service-commment -p 8083:3003 ${{ secrets.DOCKERHUB_USERNAME }}/api/comment-service:1.0
         EOF
